Bug 943655 - Fix compiler warnings "variable 'err' set but not used [-Wunused-but-set-variable]" in /mailnews/base/search. r=rkent