mailnews/base/search/src/nsMsgLocalSearch.cpp
@@ -654,7 +654,7 @@ nsresult nsMsgSearchOfflineMail::ProcessSearchTerm(nsIMsgDBHdr *msgToMatch,
     }
 
     *pResult = result;
-    return NS_OK;
+    return err;
 }
 
 nsresult nsMsgSearchOfflineMail::MatchTerms(nsIMsgDBHdr *msgToMatch,
